2005-04-25  Lluis Sanchez Gual  <lluis@novell.com>

	* DebuggingService.cs: Dispose the output pad when the debug session
	ends. The Run method now takes a progress monitor and will stop if
	the monitor notifies a cancel request. The Run method is now also
	responsible of creating the output pad.
	
	* DebuggerCommands.cs:
	* MonoDevelopDebugger.addin.xml: Use the new syntax for defining
	commands. The DebugProject and DebugKillApplication commands have
	been moved to MonoDevelop.Base since may they be reused by other addins.

2005-04-19  Chris Toshok  <toshok@ximian.com>

	* Visualizers/TargetObjectProvider.cs: remove unnecessary using
	lines.
	(TargetObjectProvider.IsObjectReplaceable): always return false,
	as the Transfer/Replace methods are not implemented.
	
	* Visualizers/visualizer.snk: new file, our assembly strong name.

	* Visualizers/Makefile.am (DEFINES): put the -define's here.
	($(ASSEMBLY)): use $DEFINES and put our keyfile in.
	(DLLS): prune these to just gtk-sharp and mono-debugger libs.

2005-04-14  Chris Toshok  <toshok@ximian.com>

	* Visualizers/TargetObjectProvider.cs
	(TargetObjectProvider.GetData): implement, using
	TargetMemoryStream.

	* Visualizers/Makefile.am (DLLS): remove the -pkg:gtk-sharp-2.0
	(FILES): add TargetMemoryStream.cs
	(install-data-local): add the beginnings of an install target.  we
	still need a strong name.

	* Visualizers/TargetMemoryStream.cs: new file.  a proxy to manage
	a debugee-side MemoryStream for use in serializing objects.

	* Gui/LocalsPad.cs (LocalsPad.InsertStrucChildren): if we're
	inserting a proxy's attribute, return afterward instead of falling
	through to the default behavior.
	(LocalsPad.VisualizerActivate): force the debugee to load the
	assembly containing the source type.
	(LocalsPad.TreePopup): populate the Visualizers submenu with all
	applicable visualizers.
	(LocalsPad.GetDebuggerVisualizerAttributes): return an array of
	attributes.
