@@ -139,7 +139,9 @@ namespace MonoDevelop.Debugger
 			}
 
 			foreach (Process t in ((DebuggingService)Runtime.DebuggingService).Threads) {
-				if (!t.IsDaemon) {
+				if (t.State == TargetState.NO_TARGET)
+					threads_to_remove.Remove (t);
+				else if (!t.IsDaemon) {
 					UpdateThread (t);
 					threads_to_remove.Remove (t);
 				}
